[package]
name = "PM-add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
prettytable-rs = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

config = { path = "../config" }
PM-list = { path = "../PM-list" }
chrono = "0.4.31"
